# practicum-less-08-code-review

./: .gitignore  README.md  pyproject.toml  requirements  ruff.toml
src/: data.py  features.py  main.py  model.py
tests/: test_data.py
